# pkgcraft

./: .gitmodules  Cargo.toml  Cross.toml  README.md  clippy.toml  rustfmt.toml
arcanist/: Cargo.toml  build.rs
arcanist/proto/: arcanist.proto
arcanist/src/: main.rs  service.rs  settings.rs  uds.rs
arcanist/src/cli/: argparse.rs  main.rs  settings.rs  subcmds.rs
arcanist/src/cli/subcmds/: add.rs  del.rs  repo.rs  search.rs  version.rs
arcanist/src/lib/: error.rs  lib.rs  utils.rs
arcanist/src/server/: main.rs  service.rs  settings.rs  uds.rs
arcanist/tests/: lib.rs
crates/arcanist/: Cargo.toml  README.md  build.rs
crates/arcanist/proto/: arcanist.proto
crates/arcanist/src/: main.rs
crates/arcanist/src/cli/: main.rs  settings.rs  subcmds.rs
crates/arcanist/src/lib/: utils.rs
crates/arcanist/src/server/: main.rs  service.rs  settings.rs  uds.rs
crates/arcanist/tests/: lib.rs
crates/lib/: Cargo.toml
crates/lib/benches/: atom.rs
crates/lib/src/atom/: mod.rs  parser.rs  version.rs
crates/lib/tests/: lib.rs
crates/pkgcraft/: Cargo.toml  LICENSE  README.md
crates/pkgcraft-c/: Cargo.toml  README.md  cbindgen.toml  meson.build
crates/pkgcraft-c/src/: atom.rs  config.rs  dep.rs  depset.rs  eapi.rs  error.rs  free.rs  lib.rs  logging.rs  macros.rs  opaque.rs  panic.rs  parse.rs  pkg.rs  repo.rs  restrict.rs  types.rs  utils.rs
crates/pkgcraft-c/src/atom/: version.rs
crates/pkgcraft-c/src/dep/: cpn.rs  cpv.rs  pkg.rs  set.rs  spec.rs  uri.rs  use_dep.rs  version.rs
crates/pkgcraft-c/src/pkg/: ebuild.rs
crates/pkgcraft-c/src/repo/: ebuild.rs  ebuild_temp.rs  fake.rs  set.rs  temp.rs
crates/pkgcraft-c/tests/: atom.c  atom_cmp.c  dep_cmp.c  dep_parse.c  meson.build  pkgdep.c  pkgdep_cmp.c
crates/pkgcraft-python/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml
crates/pkgcraft-python/src/: config.rs  dep.rs  eapi.rs  error.rs  lib.rs  parse.rs  pkg.rs  repo.rs
crates/pkgcraft-python/src/dep/: cpv.rs  pkg.rs  version.rs
crates/pkgcraft-python/src/pkg/: ebuild.rs
crates/pkgcraft-python/src/repo/: ebuild.rs  fake.rs
crates/pkgcraft-tools/: CHANGELOG.md  Cargo.toml  README.md
crates/pkgcraft-tools/src/: format.rs  main.rs  subcmds.rs
crates/pkgcraft-tools/src/subcmds/: completion.rs  cpv.rs  dep.rs  pkg.rs  repo.rs  version.rs
crates/pkgcraft-tools/tests/: completion.rs  pk.rs  pkg.rs  predicates.rs  repo.rs
crates/pkgcraft-tools/tests/cpv/: compare.rs  intersect.rs  parse.rs  set.rs  sort.rs
crates/pkgcraft-tools/tests/dep/: compare.rs  intersect.rs  parse.rs  set.rs  sort.rs
crates/pkgcraft-tools/tests/pk/: cpv.rs  dep.rs  pk.rs  pkg.rs  predicates.rs  repo.rs
crates/pkgcraft-tools/tests/pkg/: env.rs  fetch.rs  manifest.rs  metadata.rs  pretend.rs  showkw.rs  source.rs
crates/pkgcraft-tools/tests/repo/: add.rs  eapi.rs  eclass.rs  leaf.rs  license.rs  list.rs  mirror.rs  remove.rs  revdeps.rs  sync.rs
crates/pkgcraft-tools/tests/version/: compare.rs  intersect.rs  parse.rs  set.rs  sort.rs
crates/pkgcraft/benches/: bench.rs  dep.rs  depset.rs  pkgdep.rs  repo.rs  version.rs
crates/pkgcraft/src/: archive.rs  atom.rs  bash.rs  cli.rs  command.rs  config.rs  dep.rs  depset.rs  eapi.rs  error.rs  fetch.rs  files.rs  io.rs  lib.rs  macros.rs  parser.rs  peg.rs  pkg.rs  pkgsh.rs  repo.rs  restrict.rs  set.rs  shell.rs  sync.rs  test.rs  traits.rs  types.rs  utils.rs  xml.rs
crates/pkgcraft/src/atom/: parse.rs  version.rs
crates/pkgcraft/src/cli/: maybe_stdin.rs  targets.rs  tristate.rs
crates/pkgcraft/src/config/: portage.rs  repo.rs
crates/pkgcraft/src/dep/: cpn.rs  cpv.rs  dependency.rs  dependency_iter.rs  dependency_set.rs  parse.rs  pkg.rs  set.rs  spec.rs  uri.rs  use_dep.rs  version.rs
crates/pkgcraft/src/error/: peg.rs
crates/pkgcraft/src/pkg/: ebuild.rs  fake.rs
crates/pkgcraft/src/pkgsh/: builtins.rs  install.rs  metadata.rs  operations.rs  phase.rs  test.rs  utils.rs
crates/pkgcraft/src/repo/: ebuild.rs  ebuild_temp.rs  empty.rs  fake.rs  nonexistent.rs  set.rs  temp.rs
crates/pkgcraft/src/restrict/: atom.rs  boolean.rs  dep.rs  depset.rs  ordered.rs  set.rs  str.rs
crates/pkgcraft/src/shell/: builtins.rs  commands.rs  environment.rs  hooks.rs  install.rs  phase.rs  (+7 more)
crates/pkgcruft/: Cargo.toml  README.md
crates/pkgcruft-git/: Cargo.toml  Cross.toml  LICENSE  README.md  build.rs
crates/pkgcruft-git/examples/: gentoo  pkgcruft-gitd
crates/pkgcruft-git/proto/: pkgcruft.proto
crates/pkgcruft-git/src/: error.rs  git.rs  lib.rs  proto.rs  service.rs  uds.rs  utils.rs
crates/pkgcruft-git/tests/: client.rs  git.rs  lib.rs  pre_commit.rs  pre_push.rs  pre_receive.rs  prepare_commit_msg.rs  server.rs  service.rs  utils.rs
crates/pkgcruft/benches/: bench.rs  check.rs  scan.rs
crates/pkgcruft/src/: bash.rs  check.rs  error.rs  ignore.rs  iter.rs  lib.rs  pipeline.rs  report.rs  reporter.rs  runner.rs  scan.rs  scanner.rs  scope.rs  source.rs  test.rs  utils.rs
crates/pkgcruft/tests/: completion.rs  diff.rs  ignore.rs  pkgcruft.rs  replay.rs  scan.rs  test.rs
crates/scallop/: Cargo.toml  README.md  build.rs
crates/scallop/examples/: scallop.rs
crates/scallop/src/: array.rs  bash.rs  builtins.rs  command.rs  error.rs  functions.rs  lib.rs  macros.rs  pool.rs  scallop.rs  shell.rs  shm.rs  source.rs  status.rs  test.rs  traits.rs  utils.rs  variables.rs
pakt/: Cargo.toml  README.md  build.rs
pakt/src/: argparse.rs  main.rs  settings.rs  subcmds.rs
pakt/src/subcmds/: add.rs  del.rs  mod.rs  repo.rs  search.rs  version.rs
pkgcraft/: Cargo.toml  README.md  cbindgen.toml
pkgcraft/benches/: atom.rs
pkgcraft/bindings/python/: .gitignore  cbindgen.toml  setup.py
pkgcraft/src/: atom.rs  capi.rs  config.rs  eapi.rs  error.rs  lib.rs  macros.rs  peg.rs  repo.rs  sync.rs  utils.rs
pkgcraft/src/atom/: mod.rs  parser.rs  version.rs
pkgcraft/src/config/: mod.rs  repo.rs
pkgcraft/src/depspec/: license.rs  pkgdep.rs  required_use.rs  src_uri.rs
pkgcraft/src/ebuild/: mod.rs  repo.rs
pkgcraft/src/repo/: ebuild.rs  fake.rs  mod.rs
pkgcraft/src/sync/: git.rs  mod.rs  tar.rs
(+777 files in other folders)
