[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Tim Harder <radhermit@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[workspace.lints.rust]
unreachable_pub = "warn"

[profile.release]
panic = 'abort'

[profile.release-strip]
inherits = "release"
strip = "symbols"
lto = "thin"
codegen-units = 1
