[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Tim Harder <radhermit@gmail.com>"]
edition = "2021"
rust-version = "1.84"

[workspace.lints.rust]
unreachable_pub = "warn"
unused = "allow"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
panic = "abort"

[profile.release-strip]
inherits = "release"
strip = "symbols"
lto = "thin"
codegen-units = 1
