[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Tim Harder <radhermit@gmail.com>"]
edition = "2024"
rust-version = "1.87"

[workspace.lints.rust]
unreachable_pub = "warn"

[profile.release]
panic = "abort"

[profile.release-strip]
inherits = "release"
strip = "symbols"
lto = "thin"
codegen-units = 1
