[package]
name = "arcanist"
version = "0.0.1"
description = "package-building daemon leveraging pkgcraft"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/pkgcraft/arcanist"
repository = "https://github.com/pkgcraft/pkgcraft"
readme = "README.md"
license = "MIT"
edition = "2018"
autotests = false

[dependencies]
anyhow = "1.0.42"
clap = { version = "3.0.0-beta.4", default-features = false, features = ["std", "suggestions"] }
config = "0.11"
pkgcraft = { path = "../pkgcraft", version = "0.0.2" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
warp = "0.3"

[[bin]]
bench = false
path = "src/main.rs"
name = "arcanist"
