[package]
name = "arcanist"
version = "0.0.1"
description = "package-building daemon leveraging pkgcraft"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/pkgcraft/arcanist"
repository = "https://github.com/pkgcraft/pkgcraft"
readme = "README.md"
license = "MIT"
edition = "2018"
autotests = false

[dependencies]
anyhow = "1.0.42"
async-stream = "0.3.2"
clap = { version = "3.0.0-beta.4", default-features = false, features = ["std", "suggestions"] }
config = "0.11"
futures = "0.3.16"
pkgcraft = { path = "../pkgcraft", version = "0.0.2" }
prost = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
tonic = { version = "0.5.2", features = ["tls", "compression"] }

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["compression"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "arcanist"
