[package]
name = "arcanist"
version = "0.0.3"
description = "package-building daemon leveraging pkgcraft"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/pkgcraft/arcanist"
repository = "https://github.com/pkgcraft/pkgcraft"
readme = "README.md"
license = "MIT"
edition = "2018"
autotests = false

[dependencies]
anyhow = "1.0.42"
async-stream = "0.3.2"
clap = { version = "3.0.0-beta.4", default-features = false, features = ["std", "suggestions"] }
config = "0.11"
futures = "0.3.16"
pkgcraft = { path = "../pkgcraft", version = "0.0.1" }
prost = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
tonic = { version = "0.5.2", features = ["tls", "compression"] }

# pakt specific deps
log = "0.4"
once_cell = "1.8.0"
stderrlog = "0.5"
tower = "0.4.8"

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["compression"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[[bin]]
bench = false
path = "src/server/main.rs"
name = "arcanist"

[[bin]]
bench = false
path = "src/cli/main.rs"
name = "pakt"

[[test]]
name = "integration"
path = "tests/lib.rs"
