[package]
name = "pakt"
version = "0.0.1"
description = "command-line tool leveraging pkgcraft"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/pkgcraft/pakt"
repository = "https://github.com/pkgcraft/pkgcraft"
documentation = "https://github.com/pkgcraft/pkgcraft/pakt"
readme = "README.md"
license = "MIT"
edition = "2018"
autotests = false

[dependencies]
anyhow = "1.0.42"
config = "0.11"
log = "0.4"
pkgcraft = { path = "../pkgcraft", version = "0.0.2" }
serde = { version = "1.0", features = ["derive"] }
stderrlog = "0.5"

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
default-features = false
features = [ "suggestions", "std" ]

[[bin]]
bench = false
path = "src/main.rs"
name = "pakt"
