[package]
name = "pakt"
version = "0.0.1"
description = "command-line tool leveraging pkgcraft"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/pkgcraft/pakt"
repository = "https://github.com/pkgcraft/pkgcraft"
readme = "README.md"
license = "MIT"
edition = "2018"
autotests = false

[dependencies]
anyhow = "1.0.42"
config = "0.11"
log = "0.4"
once_cell = "1.8.0"
pkgcraft = { path = "../pkgcraft", version = "0.0.2" }
serde = { version = "1.0", features = ["derive"] }
stderrlog = "0.5"

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false
features = [ "suggestions", "std" ]

[build-dependencies]
walkdir = "2"
indoc = "1.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "pakt"
