[package]
name = "pkgcraft"
version = "0.0.2"
description = "library of Gentoo Linux functionality"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/pkgcraft"
repository = "https://github.com/pkgcraft/pkgcraft"
documentation = "https://github.com/pkgcraft/pkgcraft"
readme = "README.md"
license = "MIT"
edition = "2018"
autotests = false

[lib]
name = "pkgcraft"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/lib.rs"

[dependencies]
git2 = "0.13"
indexmap = { version = "1.7.0", features = ["serde"] }
log = "0.4"
once_cell = "1.8.0"
peg = "0.7"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.9.4"
toml = "0.5.8"

[dev-dependencies]
criterion = "0.3"
maplit = "1.0.2"

[[bench]]
name = "bench"
harness = false
