[package]
name = "pkgcraft"
version = "0.0.1"
description = "library of Gentoo Linux functionality"
authors = ["Tim Harder <radhermit@gmail.com>"]
homepage = "https://github.com/pkgcraft/pkgcraft"
repository = "https://github.com/pkgcraft/pkgcraft"
readme = "README.md"
license = "MIT"
edition = "2018"
autotests = false

[lib]
name = "pkgcraft"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/lib.rs"

[dependencies]
async-trait = "0.1.51"
chic = "1"
flate2 = "1.0"
futures = "0.3.16"
git2 = "0.13"
indexmap = { version = "1.7.0", features = ["serde"] }
log = "0.4"
once_cell = "1.8.0"
peg = "0.7"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.9.4"
tar = "0.4"
tempfile = "3"
thiserror = "1.0.26"
tokio = { version = "1", features = ["full"] }
toml = "0.5.8"

[dev-dependencies]
criterion = "0.3"
maplit = "1.0.2"

[[bench]]
name = "bench"
harness = false
