[package]
name = "arcanist"
version = "0.0.5"
description = "package-building daemon leveraging pkgcraft"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/arcanist"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/arcanist"
readme = "README.md"
license = "MIT"
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.93"
async-stream = "0.3.6"
clap = { version = "4.5.20", default-features = false, features = ["std", "suggestions"] }
config = { version = "0.14.1", default-features = false, features = ["toml"] }
futures = "0.3.31"
hyper-util = "0.1.10"
pkgcraft = { path = "../pkgcraft", version = "0.0.17" }
prost = "0.13.3"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.68"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
tonic = { version = "0.12.3", features = ["tls", "gzip"] }
url = "2.5.3"

# pakt specific deps
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.5.1"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
assert_cmd = "2.0.16"
regex = "1.11.1"
tempfile = "3.14.0"

[lib]
name = "arcanist"
path = "src/lib/lib.rs"

[[bin]]
bench = false
path = "src/server/main.rs"
name = "arcanist"

[[bin]]
bench = false
path = "src/cli/main.rs"
name = "pakt"

[[test]]
name = "integration"
path = "tests/lib.rs"
