[package]
name = "arcanist"
version = "0.0.5"
description = "package-building daemon leveraging pkgcraft"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/arcanist"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/arcanist"
readme = "README.md"
license = "MIT"
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
clap = { version = "4.5.38", default-features = false, features = ["std", "suggestions"] }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
futures = "0.3.31"
hyper-util = "0.1.12"
pkgcraft = { path = "../pkgcraft", version = "0.0.27" }
prost = "0.13.5"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.13.1", features = ["tls-ring", "gzip"] }
url = "2.5.4"

# pakt specific deps
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = "0.5.2"

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
assert_cmd = "2.0.17"
regex = "1.11.1"
tempfile = "3.20.0"

[lib]
name = "arcanist"
path = "src/lib/lib.rs"

[[bin]]
bench = false
path = "src/server/main.rs"
name = "arcanist"

[[bin]]
bench = false
path = "src/cli/main.rs"
name = "pakt"

[[test]]
name = "integration"
path = "tests/lib.rs"
