[package]
name = "pkgcraft-c"
version = "0.0.30"
description = "C library for pkgcraft"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft-c"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft-c"
readme = "README.md"
license = "MIT"
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "pkgcraft"
crate-type = ["cdylib"]

[features]
capi = []

[dependencies]
pkgcraft = { path = "../pkgcraft", version = "0.0.30" }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
