[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pkgcraft"
description = "python bindings for pkgcraft"
authors = [{name = "Tim Harder", email = "radhermit@gmail.com"}]
requires-python = ">=3.10"
keywords = ["gentoo"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
compatibility = "linux"
