[package]
name = "pkgcraft-tools"
version = "0.0.30"
description = "CLI tools based on pkgcraft"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft-tools"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft-tools"
readme = "README.md"
license = "MIT"
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "pk"
path = "src/main.rs"

[features]
# flaky tests that aren't run by default
flaky = []
# network tests that aren't run by default
network = []

[dependencies]
aho-corasick = "1.1.4"
anstream = "0.6.21"
anyhow = "1.0.100"
camino = "1.2.1"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
clap-verbosity-flag = "3.0.4"
colorchoice-clap = "1.0.7"
futures = "0.3.31"
humantime = "2.3.0"
indexmap = { version = "2.12.1", features = ["rayon", "serde"] }
indicatif = "0.18.3"
indoc = "2.0.7"
itertools = "0.14.0"
num_cpus = "1.17.0"
pkgcraft = { path = "../pkgcraft", version = "0.0.30" }
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["hickory-dns", "rustls-tls", "socks", "stream"] }
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"

# pk pkg source: CSV output support
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }

# pk pkg env: glob filter support
globset = "0.4.18"

# pk pkg showkw: tabular output support
tabled = { version = "0.20.0", features = ["ansi"] }

[dev-dependencies]
assert_cmd = { version = "2.1.1" }
pkgcraft = { path = "../pkgcraft", version = "0.0.30", features = ["test"] }
predicates = "3.1.3"
pretty_assertions = "1.4.1"
walkdir = "2.5.0"
wiremock = "0.6.5"

[[test]]
name = "pk"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "txz"
disabled-strategies = ["quick-install", "compile"]
