[package]
name = "pkgcraft"
version = "0.0.18"
description = "library of Gentoo functionality"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft"
readme = "README.md"
license = "MIT"
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "pkgcraft"

[features]
default = []
# enable git repo syncing support
git = ["dep:git2"]
# enable repo syncing over https, e.g. tar+https
https = ["dep:flate2", "dep:reqwest", "dep:tar", "dep:tokio"]
# external test support
test = ["dep:assert_cmd", "dep:pretty_assertions"]

[dependencies]
blake2 = "0.10.6"
blake3 = { version = "1.5.4", features = ["traits-preview"] }
cached = "0.54.0"
camino = { version = "1.1.9", features = ["serde1"] }
chic = "1.2.2"
clap = { version = "4.5.21", features = ["derive"] }
crossbeam-channel = "0.5.13"
dashmap = "6.1.0"
digest = "0.10.7"
enum-as-inner = "0.6.1"
filetime = "0.2.25"
flate2 = { version = "1.0.35", optional = true }
futures = "0.3.31"
git2 = { version = "0.19.0", optional = true }
glob = "0.3.1"
hex = "0.4.3"
indexmap = { version = "2.6.0", features = ["rayon", "serde"] }
indicatif = "0.17.9"
indoc = "2.0.5"
ipc-channel = "0.19.0"
is_executable = "1.0.4"
itertools = "0.13.0"
libc = "0.2.164"
md-5 = "0.10.6"
nix = { version = "0.29.0", features = ["user"] }
num_cpus = "1.16.0"
peg = "0.8.4"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "stream"], optional = true }
roxmltree = "0.20.0"
rust-ini = "0.21.1"
scallop = { path = "../scallop", version = "0.0.18" }
serde = { version = "1.0.215", features = ["derive"] }
serde_with = { version = "3.11.0", default-features = false, features = ["macros"] }
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
tar = { version = "0.4.43", optional = true }
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"], optional = true }
toml = "0.8.19"
tracing = "0.1.40"
walkdir = "2.5.0"

# exported test support deps
assert_cmd = { version = "2.0.16", optional = true }
pretty_assertions = { version = "1.4.1", optional = true }

[dev-dependencies]
criterion = "0.5"
ctor = "0.2.9"
tracing-test = "0.2.5"

[[bench]]
name = "bench"
harness = false
