[package]
name = "pkgcraft"
version = "0.0.25"
description = "library of Gentoo functionality"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft"
readme = "README.md"
license = "MIT"
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "pkgcraft"

[features]
default = []
# enable git repo syncing support
git = ["dep:git2"]
# enable repo syncing over https, e.g. tar+https
https = ["dep:flate2", "dep:tar"]
# external test support
test = ["dep:assert_cmd", "dep:pretty_assertions"]

[dependencies]
blake2 = "0.10.6"
blake3 = { version = "1.8.1", features = ["traits-preview"] }
cached = "0.55.1"
camino = { version = "1.1.9", features = ["serde1"] }
chic = "1.2.2"
clap = { version = "4.5.36", features = ["derive"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
digest = "0.10.7"
enum-as-inner = "0.6.1"
filetime = "0.2.25"
flate2 = { version = "1.1.1", optional = true }
futures = "0.3.31"
git2 = { version = "0.20.1", optional = true }
glob = "0.3.2"
hex = "0.4.3"
indexmap = { version = "2.9.0", features = ["rayon", "serde"] }
indicatif = "0.17.11"
indoc = "2.0.6"
ipc-channel = "0.19.0"
is_executable = "1.0.4"
itertools = "0.14.0"
libc = "0.2.171"
md-5 = "0.10.6"
nix = { version = "0.29.0", features = ["process", "user", "signal"] }
num_cpus = "1.16.0"
ordermap = { version = "0.5.7", features = ["rayon", "serde"] }
peg = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["hickory-dns", "rustls-tls", "socks", "stream"] }
roxmltree = "0.20.0"
rust-ini = "0.21.1"
scallop = { path = "../scallop", version = "0.0.24" }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.12.0", default-features = false, features = ["macros"] }
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
tar = { version = "0.4.44", optional = true }
tempfile = "3.19.1"
thiserror = "2.0.12"
tree-sitter = "0.25.3"
tree-sitter-bash = "0.23.3"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"

# exported test support deps
assert_cmd = { version = "2.0.16", optional = true }
pretty_assertions = { version = "1.4.1", optional = true }

[dev-dependencies]
criterion = "0.5"
ctor = "0.4.1"
tracing-test = "0.2.5"

[[bench]]
name = "bench"
harness = false
