[package]
name = "pkgcraft"
version = "0.0.29"
description = "library of Gentoo functionality"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcraft"
readme = "README.md"
license = "MIT"
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "pkgcraft"

[features]
# test support for external crates
test = ["dep:assert_cmd", "dep:pretty_assertions"]

[dependencies]
blake2 = "0.10.6"
blake3 = { version = "1.8.2", features = ["traits-preview"] }
cached = "0.56.0"
camino = { version = "1.2.0", features = ["serde1"] }
chic = "1.2.2"
clap = { version = "4.5.48", features = ["derive"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
digest = "0.10.7"
enum-as-inner = "0.6.1"
filetime = "0.2.26"
futures = "0.3.31"
gix = { version = "0.73.0", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
glob = "0.3.3"
hex = "0.4.3"
indexmap = { version = "2.11.4", features = ["rayon", "serde"] }
indicatif = "0.18.0"
indoc = "2.0.6"
ipc-channel = "0.20.2"
is_executable = "1.0.5"
itertools = "0.14.0"
libc = "0.2.175"
md-5 = "0.10.6"
nix = { version = "0.30.1", features = ["process", "user", "signal"] }
num_cpus = "1.17.0"
ordermap = { version = "0.5.12", features = ["rayon", "serde"] }
peg = "0.8.5"
rayon = "1.11.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["hickory-dns", "rustls-tls", "socks", "stream"] }
roxmltree = "0.20.0"
rust-ini = "0.21.3"
scallop = { path = "../scallop", version = "0.0.28" }
serde = { version = "1.0.225", features = ["derive"] }
serde_with = { version = "3.14.1", default-features = false, features = ["macros"] }
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.22.0"
thiserror = "2.0.16"
tree-sitter = "0.25.9"
tree-sitter-bash = "0.25.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
tracing = "0.1.41"
url = { version = "2.5.7", features = ["serde"] }
walkdir = "2.5.0"

# exported test support deps
assert_cmd = { version = "2.0.17", optional = true }
pretty_assertions = { version = "1.4.1", optional = true }

[dev-dependencies]
criterion = "0.7"
ctor = "0.5.0"
serde_json = "1.0.145"
tracing-test = "0.2.5"
assert_cmd = { version = "2.0.17" }
pretty_assertions = { version = "1.4.1"}

[[bench]]
name = "bench"
harness = false
