[package]
name = "pkgcruft-git"
version = "0.0.3"
description = "QA support for verifying git commits via pkgcruft"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft-git"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft-git"
readme = "README.md"
license = "MIT"
autobins = false
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
camino = "1.2.1"
clap = { version = "4.5.49", features = ["derive", "string"] }
clap-verbosity-flag = "3.0.4"
config = { version = "0.15.18", default-features = false, features = ["toml"] }
git2 = "0.20.2"
hyper-util = "0.1.17"
indexmap = "2.12.0"
indoc = "2.0.6"
itertools = "0.14.0"
num_cpus = "1.17.0"
pkgcraft = { path = "../pkgcraft", version = "0.0.29" }
pkgcruft = { path = "../pkgcruft", version = "0.0.16" }
prost = "0.14.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.14.2", features = ["tls-ring", "gzip"] }
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
tempfile = "3.23.0"
url = "2.5.7"

# client specific deps
tower = "0.5.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
assert_cmd = "2.0.17"
pkgcraft = { path = "../pkgcraft", version = "0.0.29", features = ["test"] }
predicates = "3.1.3"
regex = "1.12.2"

[lib]
name = "pkgcruft_git"

[[bin]]
name = "pkgcruft-gitd"

[[bin]]
name = "pkgcruft-git"

[[bin]]
name = "pkgcruft-git-pre-push"

[[bin]]
name = "pkgcruft-git-pre-commit"

[[test]]
name = "integration"
path = "tests/lib.rs"
