[package]
name = "pkgcruft-git"
version = "0.0.5"
description = "QA support for verifying git commits via pkgcruft"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft-git"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft-git"
readme = "README.md"
license = "MIT"
autobins = false
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anstream = "0.6.21"
anyhow = "1.0.100"
async-stream = "0.3.6"
camino = "1.2.2"
clap = { version = "4.5.54", features = ["derive", "string"] }
clap-verbosity-flag = "3.0.4"
colorchoice-clap = "1.0.7"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
futures = "0.3.31"
git2 = "0.20.3"
gix = { version = "0.77.0", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
hyper-util = "0.1.19"
indexmap = "2.13.0"
indoc = "2.0.7"
itertools = "0.14.0"
num_cpus = "1.17.0"
pkgcraft = { path = "../pkgcraft", version = "0.0.31" }
pkgcruft = { path = "../pkgcruft", version = "0.0.18" }
prost = "0.14.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.14.2", features = ["tls-ring", "gzip"] }
tonic-prost = "0.14.2"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
tempfile = "3.24.0"
url = "2.5.8"

# client specific deps
tower = "0.5.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
assert_cmd = "2.1.2"
pkgcraft = { path = "../pkgcraft", version = "0.0.31", features = ["test"] }
predicates = "3.1.3"
regex = "1.12.2"

[lib]
name = "pkgcruft_git"

[[bin]]
name = "pkgcruft-gitd"

[[bin]]
name = "pkgcruft-git"

[[bin]]
name = "pkgcruft-git-pre-push"

[[bin]]
name = "pkgcruft-git-pre-commit"

[[test]]
name = "integration"
path = "tests/lib.rs"
