[package]
name = "pkgcruft-git"
version = "0.0.5"
description = "QA support for verifying git commits via pkgcruft"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft-git"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft-git"
readme = "README.md"
license = "MIT"
autobins = false
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anstream = "1.0.0"
anyhow = "1.0.102"
async-stream = "0.3.6"
camino = "1.2.2"
clap = { version = "4.6.0", features = ["derive", "string"] }
clap-verbosity-flag = "3.0.4"
colorchoice-clap = "1.0.8"
config = { version = "0.15.22", default-features = false, features = ["toml"] }
futures = "0.3.32"
git2 = "0.20.4"
gix = { version = "0.78.0", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
hyper-util = "0.1.20"
indexmap = "2.13.1"
indoc = "2.0.7"
itertools = "0.14.0"
num_cpus = "1.17.0"
pkgcraft = { path = "../pkgcraft", version = "0.0.31" }
pkgcruft = { path = "../pkgcruft", version = "0.0.18" }
prost = "0.14.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.51", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.14.5", features = ["tls-ring", "gzip"] }
tonic-prost = "0.14.5"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.23"
tempfile = "3.27.0"
url = "2.5.8"

# client specific deps
tower = "0.5.3"

[build-dependencies]
tonic-prost-build = "0.14.5"

[dev-dependencies]
assert_cmd = "2.2.0"
pkgcraft = { path = "../pkgcraft", version = "0.0.31", features = ["test"] }
predicates = "3.1.4"
regex = "1.12.3"

[lib]
name = "pkgcruft_git"

[[bin]]
name = "pkgcruft-gitd"

[[bin]]
name = "pkgcruft-git"

[[bin]]
name = "pkgcruft-git-pre-push"

[[bin]]
name = "pkgcruft-git-pre-commit"

[[bin]]
name = "pkgcruft-git-prepare-commit-msg"

[[test]]
name = "integration"
path = "tests/lib.rs"
