[package]
name = "pkgcruft"
version = "0.0.14"
description = "QA library and tools based on pkgcraft"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft"
readme = "README.md"
license = "MIT"
autobins = false
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# test support
test = ["dep:assert_cmd", "dep:glob", "pkgcraft/test"]

[lib]
name = "pkgcruft"

[[bin]]
name = "pkgcruft"
path = "src/bin/main.rs"

[[test]]
name = "pkgcruft"

[[bench]]
name = "bench"
harness = false

[dependencies]
anyhow = "1.0.98"
camino = "1.1.9"
clap = { version = "4.5.38", features = ["derive", "string"] }
clap_complete = "4.5.50"
clap-verbosity-flag = "3.0.2"
colored = "3.0.0"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
indexmap = { version = "2.9.0", features = ["rayon", "serde"] }
indoc = "2.0.6"
itertools = "0.14.0"
num_cpus = "1.16.0"
pkgcraft = { path = "../pkgcraft", version = "0.0.27" }
rayon = "1.10.0"
regex = "1.11.1"
scallop = { path = "../scallop", version = "0.0.26" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strfmt = "0.2.4"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tree-sitter = "0.25.4"
url = "2.5.4"
walkdir = "2.5.0"

# exported test support deps
assert_cmd = { version = "2.0.17", optional = true }
glob = { version = "0.3.2", optional = true }

[dev-dependencies]
criterion = "0.6"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
tracing-test = "0.2.5"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "txz"
disabled-strategies = ["quick-install", "compile"]
